# shipit

./: .codespell-ignore-words.txt  .dirschema.yml  .gitignore  .pre-commit-config.yaml  .taskcluster.yml  .yamllint  README.md  README.rst  actions.json  docker-compose.yml  merge-automation-schema.json  pyproject.toml  release-promotion-schema.json  startup.sh
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: all-types-of-issues.md
.github/workflows/: pre-commit-autoupdate.yml  pre-commit.yml
api/: .gitignore  .taskcluster.yml  Dockerfile  Dockerfile.postgres  Dockerfile.public  Dockerfile.test  HISTORY.rst  MANIFEST.in  README.rst  pin.sh  products.yml  pyproject.toml  settings.py  settings_public.py  setup.py  tox.ini  trust-domains.yml  workflows.yml
api/docker.d/: build_image.sh  cert.pem  generate_version_json.sh  init.sh  key.pem  postgres_create_readonly_user.sh  push_image.sh
api/maintenance/: README.md  pin-helper.sh  pin.sh
api/requirements/: README  base.in  base.txt  local.txt  poetry.in  poetry.txt  public.in  public.txt  test.in  test.txt  tox.txt
api/scripts/: generate_public_api_schema  openapi_subset.py
api/src/backend_common/: __init__.py  action.json  api.py  api.yml  auth.py  auth0.py  aws.py  cache.py  cors.py  db.py  dockerflow.py  log.py  pulse.py  security.py  taskcluster.py  templates.py  testing.py
api/src/cli_common/: cli.py  command.py  log.py  mercurial.py  openapi_subset.py  pulse.py  taskcluster.py  utils.py
api/src/shipit_api/: __init__.py  api.py  api.yml  api_public.yml  cli.py  config.py  github.py  models.py  partners.py  product_details.py  public.py  release.py  tasks.py  worker.py  xpi.py
api/src/shipit_api/admin/: __init__.py  api.py  api.yml  auth0.py  cli.py  flask.py  github.py  merge_automation.py  models.py  product_details.py  release.py  settings.py  tasks.py  worker.py  xpi.py
api/src/shipit_api/common/: config.py  models.py  product.py  version.py
api/src/shipit_api/migrations/: env.py
api/src/shipit_api/migrations/versions/: 3bd3bbb68ca2_initial_migration.py  a91368f8211b_add_merge_automation.py  bc175ac0c2c5_rename_phase_completed_to_scheduled_at.py  c7e2a5f8b9d3_add_nightly_release.py
api/src/shipit_api/public/: __init__.py  api.py  api.yml  flask.py  settings.py
api/tests/: conftest.py  mock_client_secrets.json  test_auth0.py  test_backend_common.py  test_cli.py  test_github.py  test_merge_automation.py  test_nightly_release.py  test_openapi.py  test_product_details.py  test_publicapi.py  test_release.py  test_sentry.py  test_settings.py  test_shipit_api.py  test_tasks.py  test_versions.py  test_xpi.py
frontend/: .eslintrc.js  .neutrinorc.js  biome.jsonc  package.json  webpack.config.js
frontend-old/scripts/: deploy
frontend-old/src/: config.js  index.js
frontend-old/src/components/ProductDisabler/: index.js
frontend-old/src/components/auth/: auth0.js
frontend-old/src/configs/: production.js
frontend-old/src/views/Navigation/: index.js
frontend-old/src/views/NewXPIRelease/: index.js
frontend/__jest__/: transformer.js
frontend/scripts/: deploy  env.production  env.staging  env.testing
frontend/src/: App.jsx  Main.jsx  config.js  index.html  index.js  index.jsx  routes.js  theme.js
frontend/src/App/: index.js
frontend/src/components/: api.js  merge_automation.js  releases.js  text.js  vcs.js
frontend/src/components/Button/: index.jsx
frontend/src/components/Dashboard/: DashboardMenu.jsx  MenuComponents.jsx  MergeAutomationMenu.jsx  ReleasesMenu.js  ReleasesMenu.jsx  SettingsMenu.jsx  UserMenu.jsx  index.jsx  menuItems.js  menuItems.jsx
frontend/src/components/DecisionTaskStatus/: index.jsx
frontend/src/components/ErrorPanel/: index.jsx
frontend/src/components/MergeAutomationProgress/: index.jsx
frontend/src/components/PhaseProgress/: index.jsx
frontend/src/components/ProductDisabler/: index.js  index.jsx
frontend/src/components/ReleaseProgress/: index.jsx
frontend/src/components/Shared/: MouseOverPopover.jsx
frontend/src/components/auth/: UserSession.js
frontend/src/configs/: dev.js  development.js  local.js  master.js  production.js  staging.js  testing.js
frontend/src/utils/: Link.jsx  ReleaseContext.js  constants.js  helpers.js  matchRoutes.js  statusUtils.js
frontend/src/views/Footer/: index.js  index.jsx
frontend/src/views/ListMergeAutomation/: index.jsx
frontend/src/views/ListReleases/: index.js
frontend/src/views/ListXPIReleases/: index.js
frontend/src/views/Navigation/: index.js
frontend/src/views/NewMergeAutomation/: index.jsx
frontend/src/views/NewRelease/: index.js  index.jsx
frontend/src/views/NewXPIRelease/: index.js  index.jsx
frontend/src/views/Releases/: index.jsx
frontend/test/: helpers.test.js
taskcluster/: config.yml  requirements.in  requirements.txt
taskcluster/ci/: config.yml
taskcluster/ci/codecov/: kind.yml
taskcluster/ci/docker-image/: kind.yml
taskcluster/ci/k8s-image/: kind.yml
taskcluster/ci/pr/: kind.yml
taskcluster/ci/push-image/: kind.yml
taskcluster/ci/push-js/: kind.yml
taskcluster/ci/tests/: kind.yml
taskcluster/docker/fetch/: Dockerfile
taskcluster/docker/node/: Dockerfile
taskcluster/docker/python/: Dockerfile
taskcluster/docker/shipit/: Dockerfile
taskcluster/docker/skopeo/: Dockerfile  push_image.sh
taskcluster/kinds/codecov/: kind.yml
taskcluster/kinds/docker-image/: kind.yml
taskcluster/kinds/fetch/: kind.yml
taskcluster/kinds/k8s-image/: kind.yml
taskcluster/kinds/pr/: kind.yml
taskcluster/kinds/push-image/: kind.yml
taskcluster/kinds/push-js/: kind.yml
taskcluster/kinds/tests/: kind.yml
taskcluster/scripts/: codecov-upload.py  poetry-setup
taskcluster/shipit_taskgraph/: __init__.py  parameters.py
taskcluster/shipit_taskgraph/transforms/: cloudops_deploy.py  deploy_secret.py  docker_push.py  s3_deploy.py  substitute_version.py  version_json.py
