[project]
name = "shipit-api"
version = "1.0.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    # Required by both public and admin apps
    "connexion[swagger-ui,flask,uvicorn]>3.0,<4.0",
    "dockerflow>=2026.1.26",
    "flask",
    "flask_migrate",
    "flask_talisman",
    "mozilla-version~=5.0",
    "python-decouple",
    "sentry-sdk[flask]",
    "slugid",
    "sqlalchemy",
    "psycopg2",
    # Required only by the admin app
    "aioamqp",
    "aiohttp[speedups]",
    "arrow",
    "backoff",
    # to support signals in Flask
    "blinker",
    "deepmerge",
    "flask_login",
    "flask_oidc",
    "json-e",
    "kombu",
    "mohawk",
    "mypy",
    "pyyaml",
    "taskcluster",
]


[project.scripts]
shipit_upload_product_details = "shipit_api.admin.cli:download_product_details"
shipit_rebuild_product_details = "shipit_api.admin.cli:rebuild_product_details"
shipit_import = "shipit_api.admin.cli:shipit_import"
shipit_trigger_product_details = "shipit_api.admin.cli:trigger_product_details"

[dependency-groups]
ccov-upload = ["requests"]
dev = [
    "aioresponses",
    "black",
    "check-manifest",
    "coverage",
    "dpath",
    "flake8",
    "isort",
    "openapi-spec-validator",
    "oyaml",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "responses",
    "tox",
    "tox-uv",
]

[tool.hatch.build.targets.wheel]
packages = ["src/backend_common", "src/cli_common", "src/shipit_api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
